--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "dependencies": {
     "cli-engine-command": "^5.1.7",
     "cli-engine-config": "^1.3.7",
-    "cli-engine-heroku": "^1.1.1"
+    "cli-engine-heroku": "^1.1.1",
+    "heroku-cli-util": "^6.2.10"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
